--- a/_data/owner/ja.yml
+++ b/_data/owner/ja.yml
@@ -2,28 +2,28 @@
 # Owner's Personal Information
 ###########################################################
 # This is your brand name
-brand: "サイト名"
+brand: "peartreesのblog"
 
 # text below the brand name
-brand_sub_text: "$site_sample"
+brand_sub_text: "peartreesのブログです"
 
 # used for seo meta post author (if it's not defined in post)
-name: "作者名"
+name: "peartrees"
 
 # home page top header texts
 home:
   # you can also use $site_brand, $site_greetings, $site_welcome in line1 and line2 for replacing texts.
   top_header_line1: "$site_welcome"
   # if commented, top header will be a single line
-  top_header_line2: "$site_brand"
+  top_header_line2: "$site_brandへ"
 
 # about page sub title
 about:
-  sub_title: "$site_sample"
+  sub_title: "peartreesのブログです"
 
 # if you don't want to add copyright year, comment or leave it blank.
 # the year during which the claimed copyright for the work was first asserted.
-copyright_start_year: "2022"
+copyright_start_year: "2023"
 
 # make sure creative_commons.enable is true in _data/conf/main.yml file
 creative_commons:
@@ -48,7 +48,7 @@ meta_common_description: "メタディスクリプション"
 # the order of the items will be shown as here.
 # comment to remove any contact item
 contacts:
-  #- github: ""
+  - github: "peartrees"
   #- email: ""
   #- linkedin: ""
   #- twitter: ""
