update google files

--- a/_data/conf/main.yml
+++ b/_data/conf/main.yml
@@ -312,9 +312,9 @@ meta:
 #                Google
 ###########################################################
 google:
-  analytics:
+  # analytics:
     # disable this feature entirely for development or production env.
-    ignore: development
+    # ignore: development
   site_verification:
     # disable this feature entirely for development or production env.
     ignore: development
