--- a/_data/owner/ja.yml
+++ b/_data/owner/ja.yml
@@ -2,10 +2,10 @@
 # Owner's Personal Information
 ###########################################################
 # This is your brand name
-brand: "peartreesのblog"
+brand: "My Blog"
 
 # text below the brand name
-brand_sub_text: "peartreesのブログです"
+# brand_sub_text: "peartreesのブログです"
 
 # used for seo meta post author (if it's not defined in post)
 name: "peartrees"
@@ -19,7 +19,7 @@ home:
 
 # about page sub title
 about:
-  sub_title: "peartreesのブログです"
+  sub_title: ""
 
 # if you don't want to add copyright year, comment or leave it blank.
 # the year during which the claimed copyright for the work was first asserted.
@@ -76,7 +76,7 @@ comments:
 
 # if no id is provided, this feature will be disabled.
 # make sure your environment does not match with google.analytics.ignore in _data/conf/main.yml
-google_analytics_id: ""
+google_analytics_id: "G-F969DD0606"
 
 # there are different ways to verify web page. One is adding this as meta into html.
 # make sure you set meta.google_site_verify: true in _data/conf/main.yml
