--- a/_data/owner/ja.yml
+++ b/_data/owner/ja.yml
@@ -2,13 +2,13 @@
 # Owner's Personal Information
 ###########################################################
 # This is your brand name
-brand: "My Blog"
+brand: "Yuta Imasaka's page"
 
 # text below the brand name
-# brand_sub_text: "peartreesのブログです"
+# brand_sub_text: "Yuta Imasakaのページです"
 
 # used for seo meta post author (if it's not defined in post)
-name: "peartrees"
+name: "Yuta Imasaka"
 
 # home page top header texts
 home:
