--- a/_data/owner/ja.yml
+++ b/_data/owner/ja.yml
@@ -2,7 +2,7 @@
 # Owner's Personal Information
 ###########################################################
 # This is your brand name
-brand: "Yuta Imasaka's page"
+brand: "Yuta Imasakaのページ"
 
 # text below the brand name
 # brand_sub_text: "Yuta Imasakaのページです"
